Fix test selection handling in eog_image_has_data()

Due to a wrong value negation the function was only checking one of the
selected data types and skipping the following tests.
Spotted by Fabian Sturm.

https://bugzilla.gnome.org/show_bug.cgi?id=655794